--- a/compose/docker-logstash.yml
+++ b/compose/docker-logstash.yml
@@ -14,17 +14,17 @@
     networks:
       # local network:
       - intnet
-    # ports:
+    ports:
       # syslog access pipeline
-      # - 5000:5000/udp
-      # - 5000:5000/tcp
+      - 5000:5000/udp
+      - 5000:5000/tcp
       # syslog error pipeline
-      # - 5001:5001/udp
-      # - 5001:5001/tcp
+      - 5001:5001/udp
+      - 5001:5001/tcp
       # beat pipeline
-      # - ${LOGSTASH_PORT}:5044
+      - ${LOGSTASH_PORT}:5044
       # elastic-agent pipeline
-      # - 5045:5045
+      - 5045:5045
       # metrics
       # - 9600:9600
     volumes:
