--- a/.env.dist
+++ b/.env.dist
@@ -25,7 +25,7 @@ ES01_JAVA_OPTS="-Xms300m -Xmx300m"
 ES02_JAVA_OPTS="-Xms300m -Xmx300m"
 LS_JAVA_OPTS="-Xms512m -Xmx512m"
 KIBANA_NODE_OPTS="--max_old_space_size=512"
-CEREBRO_JAVA_OPTS="-Xms300m -Xmx300m"
+CEREBRO_OPTS="-Xms300m -Xmx300m"
 LOGSTASH_PORT=5044
 KIBANA_PORT=5601
 APM_PORT=8200
