--- a/compose/docker-apm.yml
+++ b/compose/docker-apm.yml
@@ -16,10 +16,10 @@
       - default
       # local network:
       - intnet
-    ports:
+    # ports:
     # for external apps as traefik or other apps without apm in container
-      - ${APM_PORT}:8200
-    #   - 5066:5066
+    #  - ${APM_PORT}:8200
+    #  - 5066:5066
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./certs:/usr/share/apm-server/certs
@@ -42,11 +42,15 @@
       - ELASTIC_APM_SERVICE_NODE_NAME=${APP-HOST}-${INT_NETWORK}-apm-server
       - STAGE=${STAGE}
       - VERIFICATION_MODE=${VERIFICATION_MODE}        
-#    labels:
-#      - "traefik.enable=true"
-#      - "traefik.http.routers.apm-server-public.rule=Host(`apm-server.${APP_HOST}.${INT_NETWORK}`)"
-#      - "traefik.http.routers.apm-server-public.service=apm-server-${APP_ID}"
-#      - "traefik.http.routers.apm-server-public.entrypoints=http"
-#      - "traefik.http.routers.apm-server-public.tls=false"
-#      - "traefik.http.services.apm-server.loadbalancer.server.port=8200"
-#      - "traefik.http.services.apm-server.loadbalancer.server.scheme=http"
+#     labels:
+#       - "traefik.enable=true"
+#       - "traefik.http.routers.apm-server-public.rule=Host(`apm-server.${APP_HOST}.${INT_NETWORK}`)"
+#       - "traefik.http.routers.apm-server-public.service=apm-server-${APP_ID}"
+#       - "traefik.http.routers.apm-server-public.entrypoints=https"
+#       - "traefik.http.routers.apm-server-public.tls=true"
+#       - "traefik.http.routers.apm-server-public.middlewares=apm-server-${APP_ID}@docker"
+#       - "traefik.http.middlewares.apm-server-${APP_ID}.redirectscheme.scheme=https"
+#       - "traefik.http.middlewares.apm-server-${APP_ID}.redirectscheme.port=5601"
+#       - "traefik.http.services.apm-server-${APP_ID}.loadbalancer.server.port=8200"
+#       - "traefik.http.services.apm-server-${APP_ID}.loadbalancer.server.scheme=http"
+ 
