--- a/compose/docker-filebeat.yml
+++ b/compose/docker-filebeat.yml
@@ -4,7 +4,8 @@
 #
   filebeat:
     depends_on:
-      logstash:
+      es02:
+      # logstash:
         condition: service_healthy
     # Ubuntu - filebeat
     image: docker.elastic.co/beats/filebeat:${STACK_VERSION}
@@ -13,10 +14,10 @@
     hostname: "filebeat.${APP_HOST}.${INT_NETWORK}"
     networks:
       # for traefik:
-      # - default
+      #  - default
       # local network:
       - intnet
-    user: root
+    #  user: root
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       # - /sys/fs/cgroup:/hostfs/sys/fs/cgroup:ro
@@ -44,11 +45,11 @@
       - LOGSTASH_SERVER_CERT=/usr/share/filebeat/certs/logstash.${HOST_NICK}.${INT_NETWORK}/logstash.${HOST_NICK}.${INT_NETWORK}.crt
       - LOGSTASH_SERVER_CERT_KEY=/usr/share/filebeat/certs/logstash.${HOST_NICK}.${INT_NETWORK}/logstash.${HOST_NICK}.${INT_NETWORK}.key
       - VERIFICATION_MODE=${VERIFICATION_MODE}        
-      - ELASTIC_APM_API_KEY=${ELASTIC_APM_API_KEY}
-      - ELASTIC_APM_ENVIRONMENT=${STAGE}
-      - ELASTIC_APM_SERVER_URL=${ELASTIC_APM_SERVER_URL}
-      - ELASTIC_APM_SERVICE_NAME=${APP-HOST}-${INT_NETWORK}
-      - ELASTIC_APM_SERVICE_NODE_NAME=${APP-HOST}-${INT_NETWORK}-filebeat
+      #  - ELASTIC_APM_API_KEY=${ELASTIC_APM_API_KEY}
+      #  - ELASTIC_APM_ENVIRONMENT=${STAGE}
+      #  - ELASTIC_APM_SERVER_URL=${ELASTIC_APM_SERVER_URL}
+      #  - ELASTIC_APM_SERVICE_NAME=${APP-HOST}-${INT_NETWORK}
+      #  - ELASTIC_APM_SERVICE_NODE_NAME=${APP-HOST}-${INT_NETWORK}-filebeat
 #     labels:
 #       - "traefik.enable=true"
 #       - "traefik.docker.network=${DOCKER_NETWORK}"
