--- a/compose/docker-kibana.yml
+++ b/compose/docker-kibana.yml
@@ -53,7 +53,7 @@
       - "traefik.http.routers.kibana-${APP_ID}.rule=Host(`kibana.${APP_HOST}.${INT_NETWORK}`)"
       - "traefik.http.routers.kibana-${APP_ID}.entrypoints=https"
       - "traefik.http.routers.kibana-${APP_ID}.tls=true"
-      - "traefik.http.routers.kibana-public.middlewares=kibana-${APP_ID}@docker"
+      - "traefik.http.routers.kibana-${APP_ID}.middlewares=kibana-${APP_ID}@docker"
       - "traefik.http.middlewares.kibana-${APP_ID}.redirectscheme.scheme=https"
       - "traefik.http.middlewares.kibana-${APP_ID}.redirectscheme.port=5601"
       - "traefik.http.services.kibana-${APP_ID}.loadbalancer.server.port=5601"
