--- a/compose/docker-metricbeat.yml
+++ b/compose/docker-metricbeat.yml
@@ -11,7 +11,7 @@
     restart: ${DOCKER_RESTART_POLICY}
     container_name: "${APP_ID}-metricbeat"
     hostname: "metricbeat.${APP_HOST}.${INT_NETWORK}"
-    user: root
+    #  user: root
     networks:
       # for traefik:
       # - default
