--- a/extras/kibana/kibana.yml
+++ b/extras/kibana/kibana.yml
@@ -29,7 +29,7 @@ monitoring:
       password: "${ELASTICSEARCH_PASSWORD}"
       ssl.certificateAuthorities: ["${ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES}"]
       requestTimeout: 240000
-  kibana.collection.enabled: false
+  kibana.collection.enabled: true
 
 # https://www.elastic.co/guide/en/kibana/current/settings.html#elasticsearch-ssl-cert-key
 elasticsearch:
