--- a/compose/docker-apm.yml
+++ b/compose/docker-apm.yml
@@ -13,12 +13,12 @@
     hostname: "apm-server.${APP_HOST}.${INT_NETWORK}"
     networks:
       # for traefik
-      - default
+      # - default
       # local network:
       - intnet
-    # ports:
     # for external apps as traefik or other apps without apm in container
-    #  - ${APM_PORT}:8200
+    ports:
+      - ${APM_PORT}:8200
     #  - 5066:5066
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
