--- a/compose/docker-es01.yml
+++ b/compose/docker-es01.yml
@@ -4,7 +4,7 @@
     hostname: "es01.${APP_HOST}.${INT_NETWORK}"
     networks:
       # for traefik:
-      # - default
+      - default
       # local network:
       - intnet
     ports:
@@ -35,17 +35,17 @@
       - ELASTIC_APM_SERVICE_NODE_NAME=${APP-HOST}-${INT_NETWORK}-es01
       - LICENSE=${LICENSE}
       - VERIFICATION_MODE=${VERIFICATION_MODE}
-#    labels:
-#      - "traefik.enable=true"
-#      - "traefik.docker.network=${DOCKER_NETWORK}"
-#      - "traefik.http.routers.es01-${APP_ID}-public.rule=Host(`es01.${APP_HOST}.${INT_NETWORK}`)"
-#      - "traefik.http.routers.es01-${APP_ID}-public.entrypoints=https"
-#       - "traefik.http.routers.es01-${APP_ID}-public.tls=true"
-#       - "traefik.http.routers.es01-${APP_ID}-public.middlewares=es01-${APP_ID}@docker"
-#       - "traefik.http.middlewares.es01-${APP_ID}.redirectscheme.scheme=https"
-#       - "traefik.http.middlewares.es01-${APP_ID}.redirectscheme.port=9200"
-#       - "traefik.http.services.elasticsearch-${APP_ID}.loadbalancer.server.port=9200"
-#       - "traefik.http.services.elasticsearch-${APP_ID}.loadbalancer.server.scheme=https"
+    labels:
+      - "traefik.enable=true"
+      - "traefik.docker.network=${DOCKER_NETWORK}"
+      - "traefik.http.routers.es01-${APP_ID}-public.rule=Host(`es01.eliasondrej.com`)"
+      - "traefik.http.routers.es01-${APP_ID}-public.entrypoints=https"
+      - "traefik.http.routers.es01-${APP_ID}-public.tls=true"
+      - "traefik.http.routers.es01-${APP_ID}-public.middlewares=es01-${APP_ID}@docker"
+      - "traefik.http.middlewares.es01-${APP_ID}.redirectscheme.scheme=https"
+      - "traefik.http.middlewares.es01-${APP_ID}.redirectscheme.port=9200"
+      - "traefik.http.services.elasticsearch-${APP_ID}.loadbalancer.server.port=9200"
+      - "traefik.http.services.elasticsearch-${APP_ID}.loadbalancer.server.scheme=https"
     ulimits:
       memlock:
         soft: -1
