--- a/compose/docker-kibana.yml
+++ b/compose/docker-kibana.yml
@@ -47,17 +47,18 @@
       - STV=${STV}
       - NODE_OPTIONS=${KIBANA_NODE_OPTS}
       - VERIFICATION_MODE=${VERIFICATION_MODE}
-#     labels:
-#       - "traefik.enable=true"
-#       - "traefik.docker.network=${DOCKER_NETWORK}"
-#       - "traefik.http.routers.kibana-${APP_ID}.rule=Host(`kibana.${APP_HOST}.${INT_NETWORK}`)"
-#       - "traefik.http.routers.kibana-${APP_ID}.entrypoints=https"
-#       - "traefik.http.routers.kibana-${APP_ID}.tls=true"
-#       - "traefik.http.routers.kibana-${APP_ID}.middlewares=kibana-${APP_ID}@docker"
-#       - "traefik.http.middlewares.kibana-${APP_ID}.redirectscheme.scheme=https"
-#       - "traefik.http.middlewares.kibana-${APP_ID}.redirectscheme.port=5601"
-#       - "traefik.http.services.kibana-${APP_ID}.loadbalancer.server.port=5601"
-#       - "traefik.http.services.kibana-${APP_ID}.loadbalancer.server.scheme=https"
+    labels:
+      - "traefik.enable=true"
+      - "traefik.docker.network=${DOCKER_NETWORK}"
+      # - "traefik.http.routers.kibana-${APP_ID}.rule=Host(`kibana.${APP_HOST}.${INT_NETWORK}`)"
+      - "traefik.http.routers.kibana-${APP_ID}.rule=Host(`kibana.eliasondrej.com`)"
+      - "traefik.http.routers.kibana-${APP_ID}.entrypoints=https"
+      - "traefik.http.routers.kibana-${APP_ID}.tls=true"
+      - "traefik.http.routers.kibana-${APP_ID}.middlewares=kibana-${APP_ID}@docker"
+      - "traefik.http.middlewares.kibana-${APP_ID}.redirectscheme.scheme=https"
+      - "traefik.http.middlewares.kibana-${APP_ID}.redirectscheme.port=5601"
+      - "traefik.http.services.kibana-${APP_ID}.loadbalancer.server.port=5601"
+      - "traefik.http.services.kibana-${APP_ID}.loadbalancer.server.scheme=https"
     ulimits:
       memlock:
         soft: -1
