--- a/extras/logstash/pipelines.yml
+++ b/extras/logstash/pipelines.yml
@@ -6,7 +6,7 @@
   path.config: "/usr/share/logstash/pipeline/beat.conf"
 - pipeline.id: elastic-agent-pipeline
   path.config: "/usr/share/logstash/pipeline/elastic-agent.conf"
-- pipeline.id: syslog-access-pipeline
-  path.config: "/usr/share/logstash/pipeline/syslog-access.conf"
-- pipeline.id: syslog-error-pipeline
-  path.config: "/usr/share/logstash/pipeline/syslog-error.conf"
+# - pipeline.id: syslog-access-pipeline
+#   path.config: "/usr/share/logstash/pipeline/syslog-access.conf"
+# - pipeline.id: syslog-error-pipeline
+#   path.config: "/usr/share/logstash/pipeline/syslog-error.conf"
