--- a/compose/docker-apm.yml
+++ b/compose/docker-apm.yml
@@ -17,8 +17,8 @@
       # local network:
       - intnet
     # for external apps as traefik or other apps without apm in container
-    # ports:
-    #  - ${APM_PORT}:8200
+    ports:
+      - ${APM_PORT}:8200
     #  - 5066:5066
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
