--- a/compose/docker-apm.yml
+++ b/compose/docker-apm.yml
@@ -15,10 +15,12 @@
       # for traefik
       # - default
       # local network:
-      - intnet
+      intnet:
+        aliases:
+          - apm-server.{APP_HOST}.${INT_NETWORK}
     # for external apps as traefik or other apps without apm in container
-    ports:
-      - ${APM_PORT}:8200
+    # ports:
+    #  - ${APM_PORT}:8200
     #  - 5066:5066
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
