--- a/compose/docker-es02.yml
+++ b/compose/docker-es02.yml
@@ -9,9 +9,13 @@
     hostname: "es02.${APP_HOST}.${INT_NETWORK}"
     networks:
       # for traefik:
-      # - default
+      # default:
+      #   aliases:
+      #     - es01.${APP_HOST}.${INT_NETWORK}
       # local network:
-      - intnet
+      intnet:
+        aliases:
+          - es02.${APP_HOST}.${INT_NETWORK}
     ports:
       - 9201:9201
       # - 9301:9301
@@ -40,7 +44,8 @@
       - ELASTIC_APM_SERVICE_NODE_NAME=${APP-HOST}-${INT_NETWORK}-es02
       - LICENSE=${LICENSE}
       - VERIFICATION_MODE=${VERIFICATION_MODE}
-#     labels:
+#    labels:
+#       - "traefik.enable=false"
 #       - "traefik.enable=true"
 #       - "traefik.docker.network=${DOCKER_NETWORK}"
 #       - "traefik.http.routers.es02-${APP_ID}-public.rule=Host(`es02.eliasondrej.com`)"
