--- a/compose/docker-kibana.yml
+++ b/compose/docker-kibana.yml
@@ -13,9 +13,13 @@
     hostname: "kibana.${APP_HOST}.${INT_NETWORK}"
     networks:
       # for traefik:
-      # - default
+      # default:
+      #   aliases:
+      #     - kibana.{APP_HOST}.${INT_NETWORK}
       # local network:
-        - intnet
+      intnet:
+        aliases:
+          - kibana.{APP_HOST}.${INT_NETWORK}
     ports:
       - ${KIBANA_PORT}:5601
     volumes:
@@ -47,24 +51,23 @@
       - STV=${STV}
       - NODE_OPTIONS=${KIBANA_NODE_OPTS}
       - VERIFICATION_MODE=${VERIFICATION_MODE}
-#     labels:
-#       - "traefik.enable=true"
-#       - "traefik.docker.network=${DOCKER_NETWORK}"
-#       # - "traefik.http.routers.kibana-${APP_ID}.rule=Host(`kibana.${APP_HOST}.${INT_NETWORK}`)"
-#       - "traefik.http.routers.kibana-${APP_ID}.rule=Host(`kibana.eliasondrej.com`)"
-#       - "traefik.http.routers.kibana-${APP_ID}.entrypoints=https"
-#       - "traefik.http.routers.kibana-${APP_ID}.tls=true"
-#       - "traefik.http.routers.kibana-${APP_ID}.middlewares=kibana-${APP_ID}@docker"
-#       - "traefik.http.middlewares.kibana-${APP_ID}.redirectscheme.scheme=https"
-#       - "traefik.http.middlewares.kibana-${APP_ID}.redirectscheme.port=5601"
-#       - "traefik.http.services.kibana-${APP_ID}.loadbalancer.server.port=5601"
-#       - "traefik.http.services.kibana-${APP_ID}.loadbalancer.server.scheme=https"
+    # labels:
+    #   - "traefik.enable=true"
+    #   - "traefik.docker.network=${DOCKER_NETWORK}"
+    #   - "traefik.http.routers.kibana-${APP_ID}-public.rule=Host(`kibana.eliasondrej.com`, `kibana.${APP_HOST}.${INT_NETWORK}`)"
+    #   - "traefik.http.routers.kibana-${APP_ID}-public.entrypoints=https"
+    #   - "traefik.http.routers.kibana-${APP_ID}-public.tls=true"
+    #   - "traefik.http.routers.kibana-${APP_ID}-public.middlewares=kibana-${APP_ID}@docker"
+    #   - "traefik.http.middlewares.kibana-${APP_ID}-public.redirectscheme.scheme=https"
+    #   - "traefik.http.middlewares.kibana-${APP_ID}-public.redirectscheme.port=5601"
+    #   - "traefik.http.services.kibana-${APP_ID}.loadbalancer.server.port=5601"
+    #   - "traefik.http.services.kibana-${APP_ID}.loadbalancer.server.scheme=https"
     ulimits:
       memlock:
         soft: -1
         hard: -1
     healthcheck:
-      test: ["CMD-SHELL", "curl -s --cacert config/certs/ca/ca.crt -I https://kibana.${APP_HOST}.${INT_NETWORK}:5601 | grep -q 'HTTP/1.1 302 Found'"]
+      test: ["CMD-SHELL", "curl -s --cacert config/certs/ca/ca.crt -I https://localhost:5601 | grep -q 'HTTP/1.1 302 Found'"]
       interval: 10s
       timeout: 10s
       retries: 500
