--- a/extras/filebeat/filebeat.yml
+++ b/extras/filebeat/filebeat.yml
@@ -25,28 +25,28 @@ filebeat.config:
 
 output:
   # for provisioning:
-  logstash:
-    enabled: true
-    hosts: 
-      - "logstash.${APP_HOST}.${APP_NET}:5044"
-    ssl:
-      certificate_authorities: ["${ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES}"]
-      certificate: "${LOGSTASH_SERVER_CERT}"
-      key: "${LOGSTASH_SERVER_CERT_KEY}"
-      verification_mode: "${VERIFICATION_MODE}"
-      # verification_mode: "none"
+  # logstash:
+  #   enabled: true
+  #   hosts: 
+  #     - "logstash.${APP_HOST}.${APP_NET}:5044"
+  #   ssl:
+  #     certificate_authorities: ["${ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES}"]
+  #     certificate: "${LOGSTASH_SERVER_CERT}"
+  #     key: "${LOGSTASH_SERVER_CERT_KEY}"
+  #     verification_mode: "${VERIFICATION_MODE}"
+  #     # verification_mode: "none"
    
   # for /filebeat -e setup --dashboards:
-  # elasticsearch:
-  #   hosts: 
-  #    - "https://es01.${APP_HOST}.${APP_NET}:9200"
-  #   protocol: "https"
-  #   username: "${ELASTICSEARCH_USERNAME}"
-  #   password: "${ELASTICSEARCH_PASSWORD}"
-  #   ssl:
-  #     enabled: true
-  #     certificate_authorities: ["${ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES}"]
-  #     verification_mode: "${VERIFICATION_MODE}"
+  elasticsearch:
+    hosts: 
+     - "https://es01.${APP_HOST}.${APP_NET}:9200"
+    protocol: "https"
+    username: "${ELASTICSEARCH_USERNAME}"
+    password: "${ELASTICSEARCH_PASSWORD}"
+    ssl:
+      enabled: true
+      certificate_authorities: ["${ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES}"]
+      verification_mode: "${VERIFICATION_MODE}"
 
 setup:      
   ilm.overwrite: true
