--- a/extras/filebeat/filebeat/elasticsearch.yml
+++ b/extras/filebeat/filebeat/elasticsearch.yml
@@ -20,7 +20,7 @@
     var.paths:
       - /usr/share/filebeat/elogs/es01/gc.log.[0-9]*
       - /usr/share/filebeat/elogs/es02/gc.log.[0-9]*
-      - /usr/share/filebeat/elogs/es03/gc.log.[0-9]*
+      # - /usr/share/filebeat/elogs/es03/gc.log.[0-9]*
 
   audit:
     enabled: false
