--- a/compose/docker-apm.yml
+++ b/compose/docker-apm.yml
@@ -13,7 +13,7 @@
     hostname: "apm-server.${APP_HOST}.${INT_NETWORK}"
     networks:
       # for traefik
-      # - default
+      default:
       # local network:
       intnet:
         aliases:
@@ -44,15 +44,15 @@
       - ELASTIC_APM_SERVICE_NODE_NAME=${APP-HOST}-${INT_NETWORK}-apm-server
       - STAGE=${STAGE}
       - VERIFICATION_MODE=${VERIFICATION_MODE}        
-#     labels:
-#       - "traefik.enable=true"
-#       - "traefik.http.routers.apm-server-public.rule=Host(`apm-server.${APP_HOST}.${INT_NETWORK}`)"
-#       - "traefik.http.routers.apm-server-public.service=apm-server-${APP_ID}"
-#       - "traefik.http.routers.apm-server-public.entrypoints=https"
-#       - "traefik.http.routers.apm-server-public.tls=true"
-#       - "traefik.http.routers.apm-server-public.middlewares=apm-server-${APP_ID}@docker"
-#       - "traefik.http.middlewares.apm-server-${APP_ID}.redirectscheme.scheme=https"
-#       - "traefik.http.middlewares.apm-server-${APP_ID}.redirectscheme.port=5601"
-#       - "traefik.http.services.apm-server-${APP_ID}.loadbalancer.server.port=8200"
-#       - "traefik.http.services.apm-server-${APP_ID}.loadbalancer.server.scheme=http"
- 
+    labels:
+      - "traefik.enable=true"
+      - "traefik.docker.network=${DOCKER_NETWORK}"
+      - "traefik.http.routers.apm-server-public.rule=Host(`apm-server.${APP_HOST}.${INT_NETWORK}`)"
+      - "traefik.http.routers.apm-server-public.service=apm-server-${APP_ID}"
+      - "traefik.http.routers.apm-server-public.entrypoints=https"
+      - "traefik.http.routers.apm-server-public.tls=true"
+      # - "traefik.http.routers.apm-server-public.middlewares=apm-server-${APP_ID}@docker"
+      # - "traefik.http.middlewares.apm-server-${APP_ID}.redirectscheme.scheme=https"
+      # - "traefik.http.middlewares.apm-server-${APP_ID}.redirectscheme.port=8200"
+      - "traefik.http.services.apm-server-${APP_ID}.loadbalancer.server.port=8200"
+      - "traefik.http.services.apm-server-${APP_ID}.loadbalancer.server.scheme=http"
