--- a/compose/docker-es01.yml
+++ b/compose/docker-es01.yml
@@ -4,16 +4,14 @@
     hostname: "es01.${APP_HOST}.${INT_NETWORK}"
     networks:
       # for traefik:
-      # default:
-      #   aliases:
-      #     - es01.${APP_HOST}.${INT_NETWORK}
+      default:
       # local network:
       intnet:
         aliases:
           - es01.${APP_HOST}.${INT_NETWORK}
     ports:
-      - ${ES_PORT}:9200
-      # - 9300:9300
+       - ${ES_PORT}:9200
+       # - 9300:9300
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./extras/elasticsearch/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml:ro
@@ -39,18 +37,18 @@
       - ELASTIC_APM_SERVICE_NODE_NAME=${APP-HOST}-${INT_NETWORK}-es01
       - LICENSE=${LICENSE}
       - VERIFICATION_MODE=${VERIFICATION_MODE}
-#    labels:
-#       - "traefik.enable=false"
-#       - "traefik.enable=true"
-#       - "traefik.docker.network=${DOCKER_NETWORK}"
-#       - "traefik.http.routers.es01-${APP_ID}-public.rule=Host(`es01.eliasondrej.com`)"
-#       - "traefik.http.routers.es01-${APP_ID}-public.entrypoints=https"
-#       - "traefik.http.routers.es01-${APP_ID}-public.tls=true"
-#       - "traefik.http.routers.es01-${APP_ID}-public.middlewares=es01-${APP_ID}@docker"
-#       - "traefik.http.middlewares.es01-${APP_ID}.redirectscheme.scheme=https"
-#       - "traefik.http.middlewares.es01-${APP_ID}.redirectscheme.port=9200"
-#       - "traefik.http.services.elasticsearch-${APP_ID}.loadbalancer.server.port=9200"
-#       - "traefik.http.services.elasticsearch-${APP_ID}.loadbalancer.server.scheme=https"
+    labels:
+      - "traefik.enable=false"
+      - "traefik.enable=true"
+      - "traefik.docker.network=${DOCKER_NETWORK}"
+      - "traefik.http.routers.es01-${APP_ID}-public.rule=Host(`es01.eliasondrej.com`)"
+      - "traefik.http.routers.es01-${APP_ID}-public.entrypoints=https"
+      - "traefik.http.routers.es01-${APP_ID}-public.tls=true"
+      - "traefik.http.routers.es01-${APP_ID}-public.middlewares=es01-${APP_ID}@docker"
+      - "traefik.http.middlewares.es01-${APP_ID}.redirectscheme.scheme=https"
+      - "traefik.http.middlewares.es01-${APP_ID}.redirectscheme.port=9200"
+      - "traefik.http.services.elasticsearch-${APP_ID}.loadbalancer.server.port=9200"
+      - "traefik.http.services.elasticsearch-${APP_ID}.loadbalancer.server.scheme=https"
     ulimits:
       memlock:
         soft: -1
