--- a/compose/docker-filebeat.yml
+++ b/compose/docker-filebeat.yml
@@ -29,7 +29,7 @@
       - ./logs/es01:/usr/share/filebeat/elogs/es01
       - ./logs/es02:/usr/share/filebeat/elogs/es02
       - ./logs/kibana:/usr/share/filebeat/elogs/kibana
-      # - /root/platypus-box/logs/traefik:/usr/share/filebeat/elogs/traefik
+      - /root/platypus-box/logs/traefik:/usr/share/filebeat/elogs/traefik
       - filebeat:/usr/share/filebeat
     environment:
       - APP_ID=${APP_ID}
