--- a/compose/docker-kibana.yml
+++ b/compose/docker-kibana.yml
@@ -13,9 +13,7 @@
     hostname: "kibana.${APP_HOST}.${INT_NETWORK}"
     networks:
       # for traefik:
-      # default:
-      #   aliases:
-      #     - kibana.{APP_HOST}.${INT_NETWORK}
+      default:
       # local network:
       intnet:
         aliases:
@@ -51,17 +49,18 @@
       - STV=${STV}
       - NODE_OPTIONS=${KIBANA_NODE_OPTS}
       - VERIFICATION_MODE=${VERIFICATION_MODE}
-    # labels:
-    #   - "traefik.enable=true"
-    #   - "traefik.docker.network=${DOCKER_NETWORK}"
-    #   - "traefik.http.routers.kibana-${APP_ID}-public.rule=Host(`kibana.eliasondrej.com`, `kibana.${APP_HOST}.${INT_NETWORK}`)"
-    #   - "traefik.http.routers.kibana-${APP_ID}-public.entrypoints=https"
-    #   - "traefik.http.routers.kibana-${APP_ID}-public.tls=true"
-    #   - "traefik.http.routers.kibana-${APP_ID}-public.middlewares=kibana-${APP_ID}@docker"
-    #   - "traefik.http.middlewares.kibana-${APP_ID}-public.redirectscheme.scheme=https"
-    #   - "traefik.http.middlewares.kibana-${APP_ID}-public.redirectscheme.port=5601"
-    #   - "traefik.http.services.kibana-${APP_ID}.loadbalancer.server.port=5601"
-    #   - "traefik.http.services.kibana-${APP_ID}.loadbalancer.server.scheme=https"
+    labels:
+      - "traefik.enable=true"
+      - "traefik.docker.network=${DOCKER_NETWORK}"
+      - "traefik.http.routers.kibana-public.rule=Host(`kibana.${APP_HOST}.${INT_NETWORK}`)"
+      # - "traefik.http.routers.kibana-public.rule=Host(`kibana.eliasondrej.com`)"
+      - "traefik.http.routers.kibana-public.entrypoints=https"
+      - "traefik.http.routers.kibana-public.tls=true"
+      - "traefik.http.routers.kibana-public.middlewares=kibana-${APP_ID}@docker"
+      - "traefik.http.middlewares.kibana-${APP_ID}-public.redirectscheme.scheme=https"
+      - "traefik.http.middlewares.kibana-${APP_ID}-public.redirectscheme.port=5601"
+      - "traefik.http.services.kibana-${APP_ID}.loadbalancer.server.port=5601"
+      - "traefik.http.services.kibana-${APP_ID}.loadbalancer.server.scheme=https"
     ulimits:
       memlock:
         soft: -1
