--- a/compose/docker-es01.yml
+++ b/compose/docker-es01.yml
@@ -41,7 +41,8 @@
       - "traefik.enable=false"
       - "traefik.enable=true"
       - "traefik.docker.network=${DOCKER_NETWORK}"
-      - "traefik.http.routers.es01-${APP_ID}-public.rule=Host(`es01.eliasondrej.com`)"
+      - "traefik.http.routers.kibana-public.rule=Host(`es01.${APP_HOST}.${INT_NETWORK}`)"
+      # - "traefik.http.routers.es01-${APP_ID}-public.rule=Host(`es01.eliasondrej.com`)"
       - "traefik.http.routers.es01-${APP_ID}-public.entrypoints=https"
       - "traefik.http.routers.es01-${APP_ID}-public.tls=true"
       - "traefik.http.routers.es01-${APP_ID}-public.middlewares=es01-${APP_ID}@docker"
