--- a/compose/docker-es02.yml
+++ b/compose/docker-es02.yml
@@ -46,7 +46,8 @@
       - "traefik.enable=false"
       - "traefik.enable=true"
       - "traefik.docker.network=${DOCKER_NETWORK}"
-      - "traefik.http.routers.es02-${APP_ID}-public.rule=Host(`es02.eliasondrej.com`)"
+      - "traefik.http.routers.kibana-public.rule=Host(`es02.${APP_HOST}.${INT_NETWORK}`)"
+      # - "traefik.http.routers.es02-${APP_ID}-public.rule=Host(`es02.eliasondrej.com`)"
       - "traefik.http.routers.es02-${APP_ID}-public.entrypoints=https"
       - "traefik.http.routers.es02-${APP_ID}-public.tls=true"
       - "traefik.http.routers.es02-${APP_ID}-public.middlewares=es02-${APP_ID}@docker"
