--- a/extras/metricbeat/metricbeat/nginx.yml
+++ b/extras/metricbeat/metricbeat/nginx.yml
@@ -2,17 +2,19 @@
 # Docs: https://www.elastic.co/guide/en/beats/metricbeat/main/metricbeat-module-nginx.html
 
 - module: nginx
-  metricsets:
-    - stubstatus
+  # metricsets:
+  #  - stubstatus
   period: 10s
 
   # Nginx hosts
   hosts: 
-    - "http://webplatel"
+    - "https://www.wordpress.local"
+    - "https://www.nginx.local"
 
   # Path to server status. Default nginx_status
   server_status_path: "nginx_status"
 
-  #ssl:
-  #  enabled: true
-  #  certificate_authorities: ["${ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES}"]
+  ssl:
+    enabled: true
+    certificate_authorities: ["${ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES}"]
+    verification_mode: "none"
