--- a/extras/filebeat/filebeat/nginx.yml
+++ b/extras/filebeat/filebeat/nginx.yml
@@ -10,6 +10,10 @@
     # Filebeat will choose the paths depending on your OS.
     var.paths:
       - /usr/share/filebeat/elogs/nginx/default/access.log
+      - /usr/share/filebeat/elogs/nginx/platypus-wordpress-mysql/access.log
+      - /usr/share/filebeat/elogs/nginx/platypus-wordpress-mysql/pma.access.log
+      - /usr/share/filebeat/elogs/nginx/platypus-wordpress-mysql/wp.access.log
+        
   # Error logs
   error:
     enabled: true
@@ -18,6 +22,9 @@
     # Filebeat will choose the paths depending on your OS.
     var.paths:
       - /usr/share/filebeat/elogs/nginx/default/error.log
+      - /usr/share/filebeat/elogs/nginx/platypus-wordpress-mysql/error.log
+      - /usr/share/filebeat/elogs/nginx/platypus-wordpress-mysql/pma.error.log
+      - /usr/share/filebeat/elogs/nginx/platypus-wordpress-mysql/wp.error.log
 
   # Ingress-nginx controller logs. This is disabled by default. It could be used in Kubernetes environments to parse ingress-nginx logs
   ingress_controller:
