--- a/compose/docker-end.yml
+++ b/compose/docker-end.yml
@@ -12,6 +12,9 @@ volumes:
   filebeat:
     external: true
     name: "${APP_ID}-filebeat"
+  heartbeat:
+    external: true
+    name: "${APP_ID}-heartbeat"
   kibana:
     external: true
     name: "${APP_ID}-kibana"
