--- a/compose/docker-es01.yml
+++ b/compose/docker-es01.yml
@@ -9,8 +9,8 @@
       intnet:
         aliases:
           - es01.${APP_HOST}.${INT_NETWORK}
-    ports:
-       - ${ES_PORT}:9200
+    # ports:
+       # - ${ES_PORT}:9200
        # - 9300:9300
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
@@ -38,16 +38,15 @@
       - LICENSE=${LICENSE}
       - VERIFICATION_MODE=${VERIFICATION_MODE}
     labels:
-      - "traefik.enable=false"
       - "traefik.enable=true"
       - "traefik.docker.network=${DOCKER_NETWORK}"
       - "traefik.http.routers.es01-${APP_ID}-public.rule=Host(`es01.${APP_HOST}.${INT_NETWORK}`)"
       # - "traefik.http.routers.es01-${APP_ID}-public.rule=Host(`es01.eliasondrej.com`)"
       - "traefik.http.routers.es01-${APP_ID}-public.entrypoints=https"
       - "traefik.http.routers.es01-${APP_ID}-public.tls=true"
-      - "traefik.http.routers.es01-${APP_ID}-public.middlewares=es01-${APP_ID}@docker"
-      - "traefik.http.middlewares.es01-${APP_ID}.redirectscheme.scheme=https"
-      - "traefik.http.middlewares.es01-${APP_ID}.redirectscheme.port=9200"
+      # - "traefik.http.routers.es01-${APP_ID}-public.middlewares=es01-${APP_ID}@docker"
+      # - "traefik.http.middlewares.es01-${APP_ID}.redirectscheme.scheme=https"
+      # - "traefik.http.middlewares.es01-${APP_ID}.redirectscheme.port=9200"
       - "traefik.http.services.elasticsearch-${APP_ID}.loadbalancer.server.port=9200"
       - "traefik.http.services.elasticsearch-${APP_ID}.loadbalancer.server.scheme=https"
     ulimits:
