--- a/compose/docker-logstash.yml
+++ b/compose/docker-logstash.yml
@@ -12,17 +12,21 @@
     container_name: "${APP_ID}-logstash"
     hostname: "logstash.${APP_HOST}.${INT_NETWORK}"
     networks:
+     # for traefik:
+      default:
+        aliases:
+          - logstash.{APP_HOST}.${INT_NETWORK}
       # local network:
       intnet:
         aliases:
           - logstash.{APP_HOST}.${INT_NETWORK}
-    #ports:
+    ports:
       # syslog access pipeline
-      # - 5000:5000/udp
-      # - 5000:5000/tcp
+      - 5000:5000/udp
+      - 5000:5000/tcp
       # syslog error pipeline
-      # - 5001:5001/udp
-      # - 5001:5001/tcp
+      - 5001:5001/udp
+      - 5001:5001/tcp
       # beat pipeline
       # - ${LOGSTASH_PORT}:5044
       # elastic-agent pipeline
@@ -60,6 +64,30 @@
       - ELASTIC_APM_SERVER_URL=${ELASTIC_APM_SERVER_URL}
       - ELASTIC_APM_SERVICE_NAME=${APP-HOST}-${INT_NETWORK}
       - ELASTIC_APM_SERVICE_NODE_NAME=${APP-HOST}-${INT_NETWORK}-logstash
+    labels:
+      - "traefik.enable=true"
+      - "traefik.docker.network=${DOCKER_NETWORK}"
+      - "traefik.tcp.routers.logstash-access.tls=false"
+      - "traefik.tcp.routers.logstash-access.rule=HostSNI(`*`)"
+      # - "traefik.tcp.routers.logstash-access.tls=true"
+      # - "traefik.tcp.routers.logstash-access.rule=HostSNI(`logstash.${APP_HOST}.${INT_NETWORK}`)"
+      - "traefik.tcp.routers.logstash-access.entrypoints=tcp-access"
+      - "traefik.tcp.routers.logstash-access.tls.passthrough=true"
+      - "traefik.tcp.routers.logstash-access.service=logstash-${APP_ID}-tcp-access"
+      - "traefik.tcp.services.logstash-${APP_ID}-tcp-access.loadbalancer.server.port=5000"
+      - "traefik.udp.routers.logstash-access.entrypoints=udp-access"
+      - "traefik.udp.routers.logstash-access.service=logstash-${APP_ID}-udp-access"
+      - "traefik.udp.services.logstash-${APP_ID}-udp-access.loadbalancer.server.port=5000"
+      #
+      - "traefik.tcp.routers.logstash-error.tls=false"
+      - "traefik.tcp.routers.logstash-error.rule=HostSNI(`*`)"
+      - "traefik.tcp.routers.logstash-error.entrypoints=tcp-error"
+      - "traefik.tcp.routers.logstash-error.tls.passthrough=true"
+      - "traefik.tcp.routers.logstash-error.service=logstash-${APP_ID}-tcp-error"
+      - "traefik.tcp.services.logstash-${APP_ID}-tcp-error.loadbalancer.server.port=5001"
+      - "traefik.udp.routers.logstash-error.entrypoints=udp-error"
+      - "traefik.udp.routers.logstash-error.service=logstash-${APP_ID}-udp-error"
+      - "traefik.udp.services.logstash-${APP_ID}-udp-error.loadbalancer.server.port=5001"
     healthcheck:
       test: ["CMD-SHELL", "curl -s -I http://localhost:9600 | grep -q 'HTTP/1.1 200 OK'"]
       # inspiration from https://github.com/elastic/stack-docker/blob/master/docker-compose.yml
