--- a/extras/metricbeat/metricbeat/beat-xpack.yml
+++ b/extras/metricbeat/metricbeat/beat-xpack.yml
@@ -6,6 +6,7 @@
   period: 10s
   hosts: 
     - apm-server.${APP_HOST}.${APP_NET}:5066
+    - heartbeat.${APP_HOST}.${APP_NET}:5066
     - metricbeat.${APP_HOST}.${APP_NET}:5066
     - filebeat.${APP_HOST}.${APP_NET}:5066
   #username: "beats_system"
