--- a/compose/docker-es02.yml
+++ b/compose/docker-es02.yml
@@ -14,9 +14,9 @@
       intnet:
         aliases:
           - es02.${APP_HOST}.${INT_NETWORK}
-    #ports:
-      #- 9201:9201
-      # - 9301:9301
+    # ports:
+    #   - 9201:9201
+    #   # - 9301:9301
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./extras/elasticsearch/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml:ro
@@ -42,18 +42,18 @@
       - ELASTIC_APM_SERVICE_NODE_NAME=${APP-HOST}-${INT_NETWORK}-es02
       - LICENSE=${LICENSE}
       - VERIFICATION_MODE=${VERIFICATION_MODE}
-    labels:
-      - "traefik.enable=true"
-      - "traefik.docker.network=${DOCKER_NETWORK}"
-      - "traefik.http.routers.es02-${APP_ID}-public.rule=Host(`es02.${APP_HOST}.${INT_NETWORK}`)"
-      # - "traefik.http.routers.es02-${APP_ID}-public.rule=Host(`es02.eliasondrej.com`)"
-      - "traefik.http.routers.es02-${APP_ID}-public.entrypoints=https"
-      - "traefik.http.routers.es02-${APP_ID}-public.tls=true"
-      #- "traefik.http.routers.es02-${APP_ID}-public.middlewares=es02-${APP_ID}@docker"
-      #- "traefik.http.middlewares.es02-${APP_ID}.redirectscheme.scheme=https"
-      #- "traefik.http.middlewares.es02-${APP_ID}.redirectscheme.port=9201"
-      - "traefik.http.services.elasticsearch-${APP_ID}.loadbalancer.server.port=9201"
-      - "traefik.http.services.elasticsearch-${APP_ID}.loadbalancer.server.scheme=https"
+#     labels:
+#       - "traefik.enable=true"
+#       - "traefik.docker.network=${DOCKER_NETWORK}"
+#       - "traefik.http.routers.es02-${APP_ID}-public.rule=Host(`es02.${APP_HOST}.${INT_NETWORK}`)"
+#       # - "traefik.http.routers.es02-${APP_ID}-public.rule=Host(`es02.eliasondrej.com`)"
+#       - "traefik.http.routers.es02-${APP_ID}-public.entrypoints=https"
+#       - "traefik.http.routers.es02-${APP_ID}-public.tls=true"
+#       # - "traefik.http.routers.es02-${APP_ID}-public.middlewares=es02-${APP_ID}@docker"
+#       # - "traefik.http.middlewares.es02-${APP_ID}.redirectscheme.scheme=https"
+#       # - "traefik.http.middlewares.es02-${APP_ID}.redirectscheme.port=9201"
+#       - "traefik.http.services.elasticsearch-${APP_ID}.loadbalancer.server.port=9201"
+#       - "traefik.http.services.elasticsearch-${APP_ID}.loadbalancer.server.scheme=https"
     ulimits:
       memlock:
         soft: -1
