--- a/compose/docker-logstash.yml
+++ b/compose/docker-logstash.yml
@@ -14,25 +14,23 @@
     networks:
      # for traefik:
       default:
-        aliases:
-          - logstash.{APP_HOST}.${INT_NETWORK}
       # local network:
       intnet:
         aliases:
           - logstash.{APP_HOST}.${INT_NETWORK}
-    ports:
-      # syslog access pipeline
-      - 5000:5000/udp
-      - 5000:5000/tcp
-      # syslog error pipeline
-      - 5001:5001/udp
-      - 5001:5001/tcp
-      # beat pipeline
-      # - ${LOGSTASH_PORT}:5044
-      # elastic-agent pipeline
-      # - 5045:5045
-      # metrics
-      # - 9600:9600
+    # ports:
+    #   # syslog access pipeline
+    #   - 5000:5000/udp
+    #   - 5000:5000/tcp
+    #   # syslog error pipeline
+    #   - 5001:5001/udp
+    #   - 5001:5001/tcp
+    #   # beat pipeline
+    #   - ${LOGSTASH_PORT}:5044
+    #   # elastic-agent pipeline
+    #   - 5045:5045
+    #   # metrics
+    #   # - 9600:9600
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./certs/ca/ca.crt:/usr/share/logstash/config/certs/ca.crt
@@ -64,30 +62,42 @@
       - ELASTIC_APM_SERVER_URL=${ELASTIC_APM_SERVER_URL}
       - ELASTIC_APM_SERVICE_NAME=${APP-HOST}-${INT_NETWORK}
       - ELASTIC_APM_SERVICE_NODE_NAME=${APP-HOST}-${INT_NETWORK}-logstash
-    labels:
-      - "traefik.enable=true"
-      - "traefik.docker.network=${DOCKER_NETWORK}"
-      - "traefik.tcp.routers.logstash-access.tls=false"
-      - "traefik.tcp.routers.logstash-access.rule=HostSNI(`*`)"
-      # - "traefik.tcp.routers.logstash-access.tls=true"
-      # - "traefik.tcp.routers.logstash-access.rule=HostSNI(`logstash.${APP_HOST}.${INT_NETWORK}`)"
-      - "traefik.tcp.routers.logstash-access.entrypoints=tcp-access"
-      - "traefik.tcp.routers.logstash-access.tls.passthrough=true"
-      - "traefik.tcp.routers.logstash-access.service=logstash-${APP_ID}-tcp-access"
-      - "traefik.tcp.services.logstash-${APP_ID}-tcp-access.loadbalancer.server.port=5000"
-      - "traefik.udp.routers.logstash-access.entrypoints=udp-access"
-      - "traefik.udp.routers.logstash-access.service=logstash-${APP_ID}-udp-access"
-      - "traefik.udp.services.logstash-${APP_ID}-udp-access.loadbalancer.server.port=5000"
-      #
-      - "traefik.tcp.routers.logstash-error.tls=false"
-      - "traefik.tcp.routers.logstash-error.rule=HostSNI(`*`)"
-      - "traefik.tcp.routers.logstash-error.entrypoints=tcp-error"
-      - "traefik.tcp.routers.logstash-error.tls.passthrough=true"
-      - "traefik.tcp.routers.logstash-error.service=logstash-${APP_ID}-tcp-error"
-      - "traefik.tcp.services.logstash-${APP_ID}-tcp-error.loadbalancer.server.port=5001"
-      - "traefik.udp.routers.logstash-error.entrypoints=udp-error"
-      - "traefik.udp.routers.logstash-error.service=logstash-${APP_ID}-udp-error"
-      - "traefik.udp.services.logstash-${APP_ID}-udp-error.loadbalancer.server.port=5001"
+#     labels:
+#       - "traefik.enable=true"
+#       - "traefik.docker.network=${DOCKER_NETWORK}"
+#       - "traefik.tcp.routers.logstash-access.tls=false"
+#       - "traefik.tcp.routers.logstash-access.rule=HostSNI(`*`)"
+#       - "traefik.tcp.routers.logstash-access.entrypoints=tcp-access"
+#       - "traefik.tcp.routers.logstash-access.tls.passthrough=true"
+#       - "traefik.tcp.routers.logstash-access.service=logstash-${APP_ID}-tcp-access"
+#       - "traefik.tcp.services.logstash-${APP_ID}-tcp-access.loadbalancer.server.port=5000"
+#       - "traefik.udp.routers.logstash-access.entrypoints=udp-access"
+#       - "traefik.udp.routers.logstash-access.service=logstash-${APP_ID}-udp-access"
+#       - "traefik.udp.services.logstash-${APP_ID}-udp-access.loadbalancer.server.port=5000"
+#      
+#       - "traefik.tcp.routers.logstash-error.tls=false"
+#       - "traefik.tcp.routers.logstash-error.rule=HostSNI(`*`)"
+#       - "traefik.tcp.routers.logstash-error.entrypoints=tcp-error"
+#       - "traefik.tcp.routers.logstash-error.tls.passthrough=true"
+#       - "traefik.tcp.routers.logstash-error.service=logstash-${APP_ID}-tcp-error"
+#       - "traefik.tcp.services.logstash-${APP_ID}-tcp-error.loadbalancer.server.port=5001"
+#       - "traefik.udp.routers.logstash-error.entrypoints=udp-error"
+#       - "traefik.udp.routers.logstash-error.service=logstash-${APP_ID}-udp-error"
+#       - "traefik.udp.services.logstash-${APP_ID}-udp-error.loadbalancer.server.port=5001"
+#      
+#       - "traefik.tcp.routers.logstash-elastic.tls=true"
+#       - "traefik.tcp.routers.logstash-elastic.rule=HostSNI(`logstash.${APP_HOST}.${INT_NETWORK}`)"
+#       - "traefik.tcp.routers.logstash-elastic.entrypoints=tcp-elastic"
+#       - "traefik.tcp.routers.logstash-elastic.tls.passthrough=true"
+#       - "traefik.tcp.routers.logstash-elastic.service=logstash-${APP_ID}-tcp-elastic"
+#       - "traefik.tcp.services.logstash-${APP_ID}-tcp-elastic.loadbalancer.server.port=5044"
+#      
+#       - "traefik.tcp.routers.logstash-beat.tls=true"
+#       - "traefik.tcp.routers.logstash-beat.rule=HostSNI(`logstash.${APP_HOST}.${INT_NETWORK}`)"
+#       - "traefik.tcp.routers.logstash-beat.entrypoints=tcp-beat"
+#       - "traefik.tcp.routers.logstash-beat.tls.passthrough=true"
+#       - "traefik.tcp.routers.logstash-beat.service=logstash-${APP_ID}-tcp-beat"
+#       - "traefik.tcp.services.logstash-${APP_ID}-tcp-beat.loadbalancer.server.port=5045"
     healthcheck:
       test: ["CMD-SHELL", "curl -s -I http://localhost:9600 | grep -q 'HTTP/1.1 200 OK'"]
       # inspiration from https://github.com/elastic/stack-docker/blob/master/docker-compose.yml
