--- a/compose/docker-apm.yml
+++ b/compose/docker-apm.yml
@@ -13,16 +13,14 @@
     hostname: "apm-server.${APP_HOST}.${INT_NETWORK}"
     networks:
       # for traefik
-      default:
-        aliases:
-          - apm-server.{APP_HOST}.${INT_NETWORK}
+      # default:
       # local network:
       intnet:
         aliases:
           - apm-server.{APP_HOST}.${INT_NETWORK}
     # for external apps as traefik or other apps without apm in container
-    # ports:
-    #  - ${APM_PORT}:8200
+    ports:
+      - ${APM_PORT}:8200
     #  - 5066:5066
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
