--- a/compose/docker-kibana.yml
+++ b/compose/docker-kibana.yml
@@ -13,7 +13,7 @@
     hostname: "kibana.${APP_HOST}.${INT_NETWORK}"
     networks:
       # for traefik:
-      # default:
+      default:
       # local network:
       intnet:
         aliases:
