--- a/compose/docker-logstash.yml
+++ b/compose/docker-logstash.yml
@@ -18,17 +18,17 @@
       intnet:
         aliases:
           - logstash.{APP_HOST}.${INT_NETWORK}
-    # ports:
+    ports:
     #   # syslog access pipeline
     #   - 5000:5000/udp
     #   - 5000:5000/tcp
     #   # syslog error pipeline
     #   - 5001:5001/udp
     #   - 5001:5001/tcp
-    #   # beat pipeline
-    #   - ${LOGSTASH_PORT}:5044
-    #   # elastic-agent pipeline
-    #   - 5045:5045
+      # beat pipeline
+      - ${LOGSTASH_PORT}:5044
+      # elastic-agent pipeline
+      - 5045:5045
     #   # metrics
     #   # - 9600:9600
     volumes:
