--- a/.env.dist
+++ b/.env.dist
@@ -21,6 +21,7 @@ LOGSTASH_WRITE_ROLE=logstash_write_role
 APM_PASSWORD=changeme
 LICENSE=basic
 ES_NODES=es01,es02
+KIBANA_HOST=kibana.eliasondrej.com
 ES01_JAVA_OPTS="-Xms300m -Xmx300m"
 ES02_JAVA_OPTS="-Xms300m -Xmx300m"
 LS_JAVA_OPTS="-Xms512m -Xmx512m"
