--- a/extras/filebeat/filebeat.yml
+++ b/extras/filebeat/filebeat.yml
@@ -8,16 +8,6 @@ monitoring:
   enabled: false
   cluster_uuid: "${CLUSTER_UUID}"
 
-  elasticsearch:
-    username: "${ELASTICSEARCH_USERNAME}"
-    password: "${ELASTICSEARCH_PASSWORD}"
-    hosts:
-      - "https://es01.${APP_HOST}.${APP_NET}:9200"
-    protocol: "https"
-    ssl.enabled: true
-    ssl.certificate_authorities: ["${ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES}"]
-    ssl.verification_mode: "certificate"
-
 filebeat.config:
   modules:
     path: ${path.config}/modules.d/*.yml
@@ -27,8 +17,7 @@ output:
   # for provisioning:
   logstash:
     enabled: true
-    hosts: 
-      - "logstash.${APP_HOST}.${APP_NET}:5045"
+    hosts: ["logstash:5045"]
     ssl:
       # certificate_authorities: ["${ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES}"]
       certificate: "${LOGSTASH_SERVER_CERT}"
@@ -38,8 +27,7 @@ output:
    
   # for /filebeat -e setup --dashboards:
   # elasticsearch:
-  #   hosts: 
-  #    - "https://es01.${APP_HOST}.${APP_NET}:9200"
+  #   hosts: ["https://es01:9200"]
   #   protocol: "https"
   #   username: "${ELASTICSEARCH_USERNAME}"
   #   password: "${ELASTICSEARCH_PASSWORD}"
@@ -51,13 +39,11 @@ output:
 setup:      
   ilm.overwrite: true
   template.settings:
-    index.number_of_shards: 1
+    index.number_of_shards: 2
     #index.codec: best_compression
-    source.enabled: false
+    #_source.enabled: false
   elasticsearch:
-    hosts: 
-      - "https://es01.${APP_HOST}.${APP_NET}:9200"
-      #- "https://es02.${APP_HOST}.${APP_NET}:9201"
+    hosts: ["https://es01:9200"]
     protocol: "https"
     username: "${ELASTICSEARCH_USERNAME}"
     password: "${ELASTICSEARCH_PASSWORD}"
@@ -67,7 +53,7 @@ setup:
       verification_mode: "${VERIFICATION_MODE}"
   
   kibana:
-    host: "https://kibana.${APP_HOST}.${APP_NET}:5601"
+    host: "https://kibana:5601"
     username: '${ELASTICSEARCH_USERNAME}'
     password: '${ELASTICSEARCH_PASSWORD}'
     protocol: "https"
