--- a/compose/docker-es01.yml
+++ b/compose/docker-es01.yml
@@ -1,17 +1,15 @@
     image: docker.elastic.co/elasticsearch/elasticsearch:${STACK_VERSION}
     restart: ${DOCKER_RESTART_POLICY}
     container_name: "${APP_ID}-es01"
-    hostname: "es01.${APP_HOST}.${INT_NETWORK}"
+    hostname: "es01"
     networks:
       # for traefik:
-      # default:
+      # - default
       # local network:
-      intnet:
-        aliases:
-          - es01.${APP_HOST}.${INT_NETWORK}
-    ports:
-      - ${ES_PORT}:9200
-      # - 9300:9300
+      - intnet
+    # ports:
+    #   - ${ES_PORT}:9200
+    #   # - 9300:9300
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./extras/elasticsearch/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml:ro
@@ -23,10 +21,10 @@
       - http.port=9200
       - transport.port=9300
       - discovery.seed_hosts=es02:9301
-      - xpack.security.http.ssl.key=certs/es01.${APP_HOST}.${INT_NETWORK}/es01.${APP_HOST}.${INT_NETWORK}.key
-      - xpack.security.http.ssl.certificate=certs/es01.${APP_HOST}.${INT_NETWORK}/es01.${APP_HOST}.${INT_NETWORK}.crt
-      - xpack.security.transport.ssl.key=certs/es01.${APP_HOST}.${INT_NETWORK}/es01.${APP_HOST}.${INT_NETWORK}.key
-      - xpack.security.transport.ssl.certificate=certs/es01.${APP_HOST}.${INT_NETWORK}/es01.${APP_HOST}.${INT_NETWORK}.crt
+      - xpack.security.http.ssl.key=certs/es01/es01.key
+      - xpack.security.http.ssl.certificate=certs/es01/es01.crt
+      - xpack.security.transport.ssl.key=certs/es01/es01.key
+      - xpack.security.transport.ssl.certificate=certs/es01/es01.crt
       - CLUSTER_NAME=${CLUSTER_NAME}
       - ELASTIC_PASSWORD=${ELASTIC_PASSWORD}
       - ES_JAVA_OPTS=${ES01_JAVA_OPTS}
@@ -36,8 +34,7 @@
 #     labels:
 #       - "traefik.enable=true"
 #       - "traefik.docker.network=${DOCKER_NETWORK}"
-#       - "traefik.http.routers.es01-${APP_ID}-public.rule=Host(`es01.${APP_HOST}.${INT_NETWORK}`)"
-#       # - "traefik.http.routers.es01-${APP_ID}-public.rule=Host(`es01.eliasondrej.com`)"
+#       - "traefik.http.routers.es01-${APP_ID}-public.rule=Host(`es01`)"
 #       - "traefik.http.routers.es01-${APP_ID}-public.entrypoints=https"
 #       - "traefik.http.routers.es01-${APP_ID}-public.tls=true"
 #       # - "traefik.http.routers.es01-${APP_ID}-public.middlewares=es01-${APP_ID}@docker"
@@ -50,7 +47,7 @@
         soft: -1
         hard: -1
     healthcheck:
-      test: ["CMD-SHELL", "curl -s --cacert config/certs/ca/ca.crt https://es01.${APP_HOST}.${INT_NETWORK}:9200 | grep -q 'missing authentication credentials'" ]
+      test: ["CMD-SHELL", "curl -s --cacert config/certs/ca/ca.crt https://localhost:9200 | grep -q 'missing authentication credentials'" ]
       interval: 10s
       timeout: 10s
       retries: 500
