--- a/compose/docker-es02.yml
+++ b/compose/docker-es02.yml
@@ -6,17 +6,15 @@
     image: docker.elastic.co/elasticsearch/elasticsearch:${STACK_VERSION}
     restart: ${DOCKER_RESTART_POLICY}
     container_name: "${APP_ID}-es02"
-    hostname: "es02.${APP_HOST}.${INT_NETWORK}"
+    hostname: "es02"
     networks:
       # for traefik:
-      # default:
+      # - default
       # local network:
-      intnet:
-        aliases:
-          - es02.${APP_HOST}.${INT_NETWORK}
-    ports:
-      - 9201:9201
-      # - 9301:9301
+      - intnet
+    # ports:
+    #   - 9201:9201
+    #   # - 9301:9301
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./extras/elasticsearch/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml:ro
@@ -28,10 +26,10 @@
       - http.port=9201
       - transport.port=9301
       - discovery.seed_hosts=es01:9300
-      - xpack.security.http.ssl.key=certs/es02.${APP_HOST}.${INT_NETWORK}/es02.${APP_HOST}.${INT_NETWORK}.key
-      - xpack.security.http.ssl.certificate=certs/es02.${APP_HOST}.${INT_NETWORK}/es02.${APP_HOST}.${INT_NETWORK}.crt
-      - xpack.security.transport.ssl.key=certs/es02.${APP_HOST}.${INT_NETWORK}/es02.${APP_HOST}.${INT_NETWORK}.key
-      - xpack.security.transport.ssl.certificate=certs/es02.${APP_HOST}.${INT_NETWORK}/es02.${APP_HOST}.${INT_NETWORK}.crt
+      - xpack.security.http.ssl.key=certs/es02/es02.key
+      - xpack.security.http.ssl.certificate=certs/es02/es02.crt
+      - xpack.security.transport.ssl.key=certs/es02/es02.key
+      - xpack.security.transport.ssl.certificate=certs/es02/es02.crt
       - CLUSTER_NAME=${CLUSTER_NAME}
       - ELASTIC_PASSWORD=${ELASTIC_PASSWORD}
       - ES_JAVA_OPTS=${ES02_JAVA_OPTS}
@@ -45,8 +43,7 @@
 #     labels:
 #       - "traefik.enable=true"
 #       - "traefik.docker.network=${DOCKER_NETWORK}"
-#       - "traefik.http.routers.es02-${APP_ID}-public.rule=Host(`es02.${APP_HOST}.${INT_NETWORK}`)"
-#       # - "traefik.http.routers.es02-${APP_ID}-public.rule=Host(`es02.eliasondrej.com`)"
+#       - "traefik.http.routers.es02-${APP_ID}-public.rule=Host(`es02`)"
 #       - "traefik.http.routers.es02-${APP_ID}-public.entrypoints=https"
 #       - "traefik.http.routers.es02-${APP_ID}-public.tls=true"
 #       # - "traefik.http.routers.es02-${APP_ID}-public.middlewares=es02-${APP_ID}@docker"
@@ -59,7 +56,7 @@
         soft: -1
         hard: -1
     healthcheck:
-      test: ["CMD-SHELL", "curl -s --cacert config/certs/ca/ca.crt https://es02.${APP_HOST}.${INT_NETWORK}:9201 | grep -q 'missing authentication credentials'" ]
+      test: ["CMD-SHELL", "curl -s --cacert config/certs/ca/ca.crt https://localhost:9201 | grep -q 'missing authentication credentials'" ]
       interval: 10s
       timeout: 10s
       retries: 500
