--- a/compose/docker-filebeat.yml
+++ b/compose/docker-filebeat.yml
@@ -10,7 +10,7 @@
     image: docker.elastic.co/beats/filebeat:${STACK_VERSION}
     restart: ${DOCKER_RESTART_POLICY}
     container_name: "${APP_ID}-filebeat"
-    hostname: "filebeat.${APP_HOST}.${INT_NETWORK}"
+    hostname: "filebeat"
     networks:
       # for traefik:
       #  - default
@@ -35,22 +35,18 @@
       - /root/platypus-box/logs/traefik:/usr/share/filebeat/elogs/traefik
       - filebeat:/usr/share/filebeat
     environment:
-      - APP_ID=${APP_ID}
-      - APP_HOST=${HOST_NICK}
-      - APP_NET=${INT_NETWORK}
       - CLUSTER_NAME=${CLUSTER_NAME}
       - CLUSTER_UUID=${CLUSTER_UUID}
-      - ELASTICSEARCH_HOSTS=https://es01.${HOST_NICK}.${INT_NETWORK}:9200
       - ELASTICSEARCH_USERNAME=elastic
       - ELASTICSEARCH_PASSWORD=${KIBANA_PASSWORD}
       - ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES=/usr/share/filebeat/certs/ca/ca.crt
-      - LOGSTASH_SERVER_CERT=/usr/share/filebeat/certs/logstash.${HOST_NICK}.${INT_NETWORK}/logstash.${HOST_NICK}.${INT_NETWORK}.crt
-      - LOGSTASH_SERVER_CERT_KEY=/usr/share/filebeat/certs/logstash.${HOST_NICK}.${INT_NETWORK}/logstash.${HOST_NICK}.${INT_NETWORK}.key
+      - LOGSTASH_SERVER_CERT=/usr/share/filebeat/certs/logstash/logstash.crt
+      - LOGSTASH_SERVER_CERT_KEY=/usr/share/filebeat/certs/logstash/logstash.key
       - VERIFICATION_MODE=${VERIFICATION_MODE}        
 #     labels:
 #       - "traefik.enable=true"
 #       - "traefik.docker.network=${DOCKER_NETWORK}"
-#       - "traefik.http.routers.filebeat-${APP_ID}.rule=Host(`filebeat.${APP_HOST}.${INT_NETWORK}`)"
+#       - "traefik.http.routers.filebeat-${APP_ID}.rule=Host(`filebeat`)"
 #       - "traefik.http.routers.filebeat-${APP_ID}.entrypoints=https"
 #       - "traefik.http.routers.filebeat-${APP_ID}.tls=true"
 #       - "traefik.http.services.filebeat-${APP_ID}.loadbalancer.server.port=5066"
