--- a/compose/docker-heartbeat.yml
+++ b/compose/docker-heartbeat.yml
@@ -10,14 +10,12 @@
     image: docker.elastic.co/beats/heartbeat:${STACK_VERSION}
     restart: ${DOCKER_RESTART_POLICY}
     container_name: "${APP_ID}-heartbeat"
-    hostname: "heartbeat.${APP_HOST}.${INT_NETWORK}"
+    hostname: "heartbeat"
     networks:
       # for traefik:
-      # default:
+      # - default
       # local network:
-      intnet:
-        aliases:
-          - metricbeat.{APP_HOST}.${INT_NETWORK}
+      - intnet
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./certs:/usr/share/heartbeat/certs
@@ -25,9 +23,6 @@
       - ./logs/heartbeat:/usr/share/heartbeat/logs
       - heartbeat:/usr/share/heartbeat
     environment:
-      - APP_ID=${APP_ID}
-      - APP_HOST=${HOST_NICK}
-      - APP_NET=${INT_NETWORK}
       - CLUSTER_NAME=${CLUSTER_NAME}
       - CLUSTER_UUID=${CLUSTER_UUID}
       - ELASTICSEARCH_USERNAME=elastic
@@ -38,13 +33,8 @@
 #     labels:
 #       - "traefik.enable=true"
 #       - "traefik.docker.network=${DOCKER_NETWORK}"
-#       - "traefik.http.routers.heartbeat-public.rule=Host(`heartbeat.${APP_HOST}.${INT_NETWORK}`)"
+#       - "traefik.http.routers.heartbeat-public.rule=Host(`heartbeat`)"
 #       - "traefik.http.routers.heartbeat-public.entrypoints=https"
 #       - "traefik.http.routers.heartbeat-public.tls=true"
 #       - "traefik.http.services.heartbeat-${APP_ID}.loadbalancer.server.port=5066"
 #       - "traefik.http.services.heartbeat-${APP_ID}.loadbalancer.server.scheme=http"
-    healthcheck:
-      test: ["CMD-SHELL", "curl -s -I http://heartbeat.${APP_HOST}.${INT_NETWORK}:5066 | grep -q 'HTTP/1.1 200 OK'"]
-      interval: 10s
-      timeout: 10s
-      retries: 500
