--- a/compose/docker-kibana.yml
+++ b/compose/docker-kibana.yml
@@ -10,14 +10,12 @@
     image: docker.elastic.co/kibana/kibana:${STACK_VERSION}
     restart: ${DOCKER_RESTART_POLICY}
     container_name: "${APP_ID}-kibana"
-    hostname: "kibana.${APP_HOST}.${INT_NETWORK}"
+    hostname: "kibana"
     networks:
       # for traefik:
-      # default:
+      - default
       # local network:
-      intnet:
-        aliases:
-          - kibana.{APP_HOST}.${INT_NETWORK}
+      - intnet
     ports:
       - ${KIBANA_PORT}:5601
     volumes:
@@ -29,38 +27,30 @@
     environment:
       - SERVERNAME=kibana.${APP_HOST}.${INT_NETWORK}
       - STACK_VERSION=${STACK_VERSION}
-      - APP_ID=${APP_ID}
-      - APP_HOST=${APP_HOST}
-      - APP_NET=${INT_NETWORK}
       - CLUSTER_NAME=${CLUSTER_NAME}
       - CLUSTER_UUID=${CLUSTER_UUID}
-      - ELASTICSEARCH_HOSTS=https://es01.${APP_HOST}.${INT_NETWORK}:9200
+      - ELASTICSEARCH_HOSTS=https://es01:9200
       - ELASTICSEARCH_USERNAME=kibana_system
       - ELASTICSEARCH_PASSWORD=${KIBANA_PASSWORD}
       - ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES=/usr/share/kibana/config/certs/ca/ca.crt
-      - ELASTICSEARCH_SSL_SERVER_CERT=/usr/share/kibana/config/certs/kibana.${APP_HOST}.${INT_NETWORK}/kibana.${APP_HOST}.${INT_NETWORK}.crt
-      - ELASTICSEARCH_SSL_SERVER_CERT_KEY=/usr/share/kibana/config/certs/kibana.${APP_HOST}.${INT_NETWORK}/kibana.${APP_HOST}.${INT_NETWORK}.key
+      - ELASTICSEARCH_SSL_SERVER_CERT=/usr/share/kibana/config/certs/kibana/kibana.crt
+      - ELASTICSEARCH_SSL_SERVER_CERT_KEY=/usr/share/kibana/config/certs/kibana/kibana.key
       - ELASTIC_PASSWORD=${ELASTIC_PASSWORD}
-      - ELASTIC_APM_ENVIRONMENT=${STAGE}
-      - ELASTIC_APM_API_KEY=${ELASTIC_APM_API_KEY}
-      - ELASTIC_APM_SERVER_URL=${ELASTIC_APM_SERVER_URL}
-      - ELASTIC_APM_SERVICE_NAME=${APP-HOST}-${INT_NETWORK}
-      - ELASTIC_APM_SERVICE_NODE_NAME=${APP-HOST}-${INT_NETWORK}-kibana
       - STV=${STV}
       - NODE_OPTIONS=${KIBANA_NODE_OPTS}
       - VERIFICATION_MODE=${VERIFICATION_MODE}
-#     labels:
-#       - "traefik.enable=true"
-#       - "traefik.docker.network=${DOCKER_NETWORK}"
-#       - "traefik.http.routers.kibana-public.rule=Host(`kibana.${APP_HOST}.${INT_NETWORK}`)"
-#       # - "traefik.http.routers.kibana-public.rule=Host(`kibana.eliasondrej.com`)"
-#       - "traefik.http.routers.kibana-public.entrypoints=https"
-#       - "traefik.http.routers.kibana-public.tls=true"
-#       - "traefik.http.routers.kibana-public.middlewares=kibana-${APP_ID}@docker"
-#       - "traefik.http.middlewares.kibana-${APP_ID}.redirectscheme.scheme=https"
-#       - "traefik.http.middlewares.kibana-${APP_ID}.redirectscheme.port=5601"
-#       - "traefik.http.services.kibana-${APP_ID}.loadbalancer.server.port=5601"
-#       - "traefik.http.services.kibana-${APP_ID}.loadbalancer.server.scheme=https"
+      - KIBANA_HOST=${KIBANA_HOST}
+    labels:
+      - "traefik.enable=true"
+      - "traefik.docker.network=${DOCKER_NETWORK}"
+      - "traefik.http.routers.kibana-public.rule=Host(`${KIBANA_HOST}`)"
+      - "traefik.http.routers.kibana-public.entrypoints=https"
+      - "traefik.http.routers.kibana-public.tls=true"
+      - "traefik.http.routers.kibana-public.middlewares=kibana-${APP_ID}@docker"
+      - "traefik.http.middlewares.kibana-${APP_ID}.redirectscheme.scheme=https"
+      - "traefik.http.middlewares.kibana-${APP_ID}.redirectscheme.port=5601"
+      - "traefik.http.services.kibana-${APP_ID}.loadbalancer.server.port=5601"
+      - "traefik.http.services.kibana-${APP_ID}.loadbalancer.server.scheme=https"
     ulimits:
       memlock:
         soft: -1
