--- a/compose/docker-metricbeat.yml
+++ b/compose/docker-metricbeat.yml
@@ -10,15 +10,13 @@
     image: docker.elastic.co/beats/metricbeat:${STACK_VERSION}
     restart: ${DOCKER_RESTART_POLICY}
     container_name: "${APP_ID}-metricbeat"
-    hostname: "metricbeat.${APP_HOST}.${INT_NETWORK}"
+    hostname: "metricbeat"
     #  user: root
     networks:
      # for traefik:
-      # default:
+      # - default
       # local network:
-      intnet:
-        aliases:
-          - metricbeat.{APP_HOST}.${INT_NETWORK}
+      - intnet
     user: root
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
@@ -29,35 +27,20 @@
       - ./logs/metricbeat:/usr/share/metricbeat/logs
       - metricbeat:/usr/share/metricbeat
     environment:
-      - APP_ID=${APP_ID}
-      - APP_HOST=${HOST_NICK}
-      - APP_NET=${INT_NETWORK}
       - CLUSTER_NAME=${CLUSTER_NAME}
       - CLUSTER_UUID=${CLUSTER_UUID}
-      - ELASTICSEARCH_HOSTS=https://es01.${APP_HOST}.${INT_NETWORK}:9200
       - ELASTICSEARCH_USERNAME=elastic
       - ELASTICSEARCH_PASSWORD=${ELASTIC_PASSWORD}
       - ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES=/usr/share/metricbeat/certs/ca/ca.crt
-      - ELASTIC_APM_ENVIRONMENT=${STAGE}
-      - ELASTIC_APM_API_KEY=${ELASTIC_APM_API_KEY}
-      - ELASTIC_APM_SERVER_URL=${ELASTIC_APM_SERVER_URL}
-      - ELASTIC_APM_SERVICE_NAME=${APP-HOST}-${INT_NETWORK}
-      - ELASTIC_APM_SERVICE_NODE_NAME=${APP-HOST}-${INT_NETWORK}-metricbeat
-      - LOGSTASH_SERVER_CERT=/usr/share/metricbeat/certs/logstash.${HOST_NICK}.${INT_NETWORK}/logstash.${HOST_NICK}.${INT_NETWORK}.crt
-      - LOGSTASH_SERVER_CERT_KEY=/usr/share/metricbeat/certs/logstash.${HOST_NICK}.${INT_NETWORK}/logstash.${HOST_NICK}.${INT_NETWORK}.key
+      - LOGSTASH_SERVER_CERT=/usr/share/metricbeat/certs/logstash/logstash.crt
+      - LOGSTASH_SERVER_CERT_KEY=/usr/share/metricbeat/certs/logstash/logstash.key
       - STAGE=${STAGE}
       - VERIFICATION_MODE=${VERIFICATION_MODE}        
 #     labels:
 #       - "traefik.enable=true"
 #       - "traefik.docker.network=${DOCKER_NETWORK}"
-#       - "traefik.http.routers.metricbeat-${APP_ID}.rule=Host(`metricbeat.${APP_HOST}.${INT_NETWORK}`)"
+#       - "traefik.http.routers.metricbeat-${APP_ID}.rule=Host(`metricbeat`)"
 #       - "traefik.http.routers.metricbeat-${APP_ID}.entrypoints=https"
 #       - "traefik.http.routers.metricbeat-${APP_ID}.tls=true"
 #       - "traefik.http.services.metricbeat-${APP_ID}.loadbalancer.server.port=5066"
 #       - "traefik.http.services.metricbeat-${APP_ID}.loadbalancer.server.scheme=http"
-    healthcheck:
-      # test: "metricbeat test output | grep 'talk to server... OK'"
-      test: ["CMD-SHELL", "curl -s -I http://metricbeat.${APP_HOST}.${INT_NETWORK}:5066 | grep -q 'HTTP/1.1 200 OK'"]
-      interval: 10s
-      timeout: 10s
-      retries: 500
