--- a/extras/apm-server/apm-server.yml
+++ b/extras/apm-server/apm-server.yml
@@ -15,7 +15,7 @@ apm-server:
     output:
       elasticsearch:
         hosts: 
-          - "https://es01.${APP_HOST}.${APP_NET}:9200"
+          - "https://es01:9200"
         protocol: "https"
         #api_key: "id:api_key"
         # username: "apm_system"
@@ -29,7 +29,7 @@ apm-server:
 #---------------------------- APM Server - Agent Configuration ----------------------------
   kibana:
     enabled: true
-    host: "https://kibana.${APP_HOST}.${APP_NET}:5601"
+    host: "https://kibana:5601"
     protocol: "https"
     # api_key: "${AGENT_API_KEY}"
     # username: "apm_system"
@@ -47,8 +47,8 @@ apm-server:
 output.elasticsearch:
   enabled: true
   hosts: 
-    - "https://es01.${APP_HOST}.${APP_NET}:9200"
-    # - "https://es02.${APP_HOST}.${APP_NET}:9201"
+    - "https://es01:9200"
+    # - "https://es02:9201"
   protocol: "https"
   # username: "apm_system"
   username: "${ELASTICSEARCH_USERNAME}"
@@ -73,8 +73,8 @@ monitoring:
     username: "${ELASTICSEARCH_USERNAME}"
     password: "${ELASTICSEARCH_PASSWORD}"
     hosts: 
-      - "https://es01.${APP_HOST}.${APP_NET}:9200"
-      # - "https://es02.${APP_HOST}.${APP_NET}:9201"
+      - "https://es01:9200"
+      # - "https://es02:9201"
     protocol: "https"
     ssl.enabled: true
     ssl.certificate_authorities: ["${ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES}"]
