--- a/extras/heartbeat/heartbeat.yml
+++ b/extras/heartbeat/heartbeat.yml
@@ -8,15 +8,6 @@ monitoring:
   enabled: false
   cluster_uuid: "${CLUSTER_UUID}"
 
-#   elasticsearch:
-#     username: "${ELASTICSEARCH_USERNAME}"
-#     password: "${ELASTICSEARCH_PASSWORD}"
-#     hosts: ["https://es01.${APP_HOST}.${APP_NET}:9200"]
-#     protocol: "https"
-#     ssl.enabled: true
-#     ssl.certificate_authorities: ["${ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES}"]
-#     ssl.verification_mode: "certificate"
-
 heartbeat.config.monitors:
   # Directory + glob pattern to search for configuration files
   path: ${path.config}/monitors.d/*.yml
@@ -40,8 +31,8 @@ heartbeat.monitors:
   tags: [web]
   hosts:
     # ELK
-    - https://es01.${APP_HOST}.${APP_NET}:9200
-    - https://es02.${APP_HOST}.${APP_NET}:9201
+    - https://es01:9200
+    - https://es02:9201
     # logstash for finger print:
     #- https://logstash.${APP_HOST}.${APP_NET}:5044
   ssl:
@@ -57,12 +48,12 @@ heartbeat.monitors:
   service.name: heartbeat-tcp
   tags: [tcp]
   hosts:
-    - logstash.${APP_HOST}.${APP_NET}:9600
-    - kibana.${APP_HOST}.${APP_NET}:5601
-    # - filebeat.${APP_HOST}.${APP_NET}:5066
-    # - apm-server.${APP_HOST}.${APP_NET}:5066
-    # - heartbeat.${APP_HOST}.${APP_NET}:5066
-    # - metricbeat.${APP_HOST}.${APP_NET}:5066
+    - logstash:9600
+    - kibana:5601
+    # - filebeat:5066
+    # - apm-server:5066
+    # - heartbeat:5066
+    # - metricbeat:5066
 
 #  - type: icmp
 #   schedule: '*/15 * * * * *'
@@ -87,23 +78,10 @@ processors:
   # - add_cloud_metadata: ~
   # - add_kubernetes_metadata: ~
   # https://www.elastic.co/guide/en/beats/heartbeat/current/add-observer-metadata.html
-  - add_observer_metadata:
-      cache.ttl: 5m
-      geo:
-        name: KnO
-        location: 50.3871, -13.17379
-        continent_name: Europe
-        country_iso_code: CZE
-        region_name: Czech Republic
-        region_iso_code: CZ-422
-        city_name: Klášterec nad Ohří
-  # - add_tags:
-  #   tags: ["${STAGE}"]
-  #   target: "environment"
 
 output:
   elasticsearch:
-    hosts: ["https://es01.${APP_HOST}.${APP_NET}:9200"]
+    hosts: ["https://es01:9200"]
     protocol: "https"
     username: '${ELASTICSEARCH_USERNAME}'
     password: '${ELASTICSEARCH_PASSWORD}'
@@ -115,7 +93,7 @@ output:
 setup:
   ilm.overwrite: true
   kibana:
-    host: "https://kibana.${APP_HOST}.${APP_NET}:5601"
+    host: "https://kibana:5601"
     username: '${ELASTICSEARCH_USERNAME}'
     password: '${ELASTICSEARCH_PASSWORD}'
     ssl:
