--- a/extras/kibana/kibana.yml
+++ b/extras/kibana/kibana.yml
@@ -4,7 +4,7 @@ server:
   host: "0.0.0.0"
   shutdownTimeout: "5s"
   socketTimeout: "240000"
-  publicBaseUrl: "https://kibana.${APP_HOST}.${APP_NET}:5601"
+  publicBaseUrl: "https://${KIBANA_HOST}:5601"
   ssl:
     enabled: true
     certificateAuthorities: ["${ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES}"]
@@ -21,19 +21,19 @@ monitoring:
     container:
       elasticsearch.enabled: true
       logstash.enabled: true
-    # elasticsearch:
-    #   hosts: ["https://es01.${APP_HOST}.${APP_NET}:9200"]
-    #   username: "${ELASTICSEARCH_USERNAME}"
-    #   password: "${ELASTICSEARCH_PASSWORD}"
-    #   ssl.certificateAuthorities: ["${ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES}"]
-    #   requestTimeout: 240000
+    elasticsearch:
+      hosts: ["https://es01:9200"]
+      username: "${ELASTICSEARCH_USERNAME}"
+      password: "${ELASTICSEARCH_PASSWORD}"
+      ssl.certificateAuthorities: ["${ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES}"]
+      requestTimeout: 240000
   kibana.collection.enabled: false
 
 # https://www.elastic.co/guide/en/kibana/current/settings.html#elasticsearch-ssl-cert-key
 elasticsearch:
   hosts: 
-    - "https://es01.${APP_HOST}.${APP_NET}:9200"
-    # - "https://es02.${APP_HOST}.${APP_NET}:9201"
+    - "https://es01:9200"
+    # - "https://es02:9201"
   username: "${ELASTICSEARCH_USERNAME}"
   password: "${ELASTICSEARCH_PASSWORD}"
   ssl.certificateAuthorities: ["${ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES}"]
