--- a/compose/docker-es02.yml
+++ b/compose/docker-es02.yml
@@ -12,9 +12,9 @@
       # - default
       # local network:
       - intnet
-    # ports:
-    #   - 9201:9201
-    #   # - 9301:9301
+    ports:
+      - 9201:9201
+      # - 9301:9301
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./extras/elasticsearch/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml:ro
