--- a/compose/docker-es01.yml
+++ b/compose/docker-es01.yml
@@ -7,9 +7,9 @@
       # - default
       # local network:
       - intnet
-    # ports:
-    #   - ${ES_PORT}:9200
-    #   # - 9300:9300
+    ports:
+      - ${ES_PORT}:9200
+      # - 9300:9300
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./extras/elasticsearch/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml:ro
