--- a/compose/docker-logstash.yml
+++ b/compose/docker-logstash.yml
@@ -16,19 +16,19 @@
       # - default
       # local network:
       - intnet
-    # ports:
-    #   # syslog access pipeline
-    #   - 5000:5000/udp
-    #   - 5000:5000/tcp
-    #   # syslog error pipeline
-    #   - 5001:5001/udp
-    #   - 5001:5001/tcp
-    #   # beat pipeline
-    #   - ${LOGSTASH_PORT}:5044
-    #   # elastic-agent pipeline
-    #   - 5045:5045
-    #   # metrics
-    #   # - 9600:9600
+    ports:
+      # syslog access pipeline
+      - 5000:5000/udp
+      - 5000:5000/tcp
+      # syslog error pipeline
+      - 5001:5001/udp
+      - 5001:5001/tcp
+      # beat pipeline
+      - ${LOGSTASH_PORT}:5044
+      # elastic-agent pipeline
+      - 5045:5045
+      # metrics
+      # - 9600:9600
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./certs/ca/ca.crt:/usr/share/logstash/config/certs/ca.crt
