--- a/.env.dist
+++ b/.env.dist
@@ -32,6 +32,7 @@ APM_PORT=8200
 ES_PORT=9200
 COMPOSE_HTTP_TIMEOUT=180
 TIME_ZONE=Europe/London
+ES_NET=192.168.100
 
 VERIFICATION_MODE=certificate
 ELASTIC_AGENT_TAGS=platel,${STAGE}
