--- a/compose/docker-metricbeat.yml
+++ b/compose/docker-metricbeat.yml
@@ -14,12 +14,14 @@
     #  user: root
     networks:
      # for traefik:
-      # - default
+      # default:
       # local network:
-      - intnet
+      intnet:
+        ipv4_address: ${ES_NET}.8
     user: root
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+      - ./extras/hosts/hosts:/etc/hosts
       # - /sys/fs/cgroup:/hostfs/sys/fs/cgroup:ro
       - /:/hostfs:ro
       - ./certs:/usr/share/metricbeat/certs
