--- a/compose/docker-apm.yml
+++ b/compose/docker-apm.yml
@@ -13,15 +13,17 @@
     hostname: "apm-server"
     networks:
       # for traefik
-      # - default
+      # default:
       # local network:
-      - intnet
+      intnet:
+        ipv4_address: ${ES_NET}.10
     # for external apps as traefik or other apps without apm in container
     ports:
       - ${APM_PORT}:8200
       # - 5066:5066
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+      - ./extras/hosts/hosts:/etc/hosts
       - ./certs:/usr/share/apm-server/certs
       - ./extras/apm-server/apm-server.yml:/usr/share/apm-server/apm-server.yml:ro
       - ./logs/apm:/usr/share/apm-server/logs
