--- a/compose/docker-head.yml
+++ b/compose/docker-head.yml
@@ -17,6 +17,9 @@ networks:
     external: false
     name: ${INT_NETWORK}
     driver: bridge
+    ipam:
+      config:
+        - subnet: ${ES_NET}.0/24
 
 services:
 
