--- a/compose/docker-heartbeat.yml
+++ b/compose/docker-heartbeat.yml
@@ -13,11 +13,13 @@
     hostname: "heartbeat"
     networks:
       # for traefik:
-      # - default
+      # default:
       # local network:
-      - intnet
+      intnet:
+        ipv4_address: ${ES_NET}.7
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+      - ./extras/hosts/hosts:/etc/hosts
       - ./certs:/usr/share/heartbeat/certs
       - ./extras/heartbeat/heartbeat.yml:/usr/share/heartbeat/heartbeat.yml
       - ./logs/heartbeat:/usr/share/heartbeat/logs
