--- a/compose/docker-kibana.yml
+++ b/compose/docker-kibana.yml
@@ -13,13 +13,15 @@
     hostname: "kibana"
     networks:
       # for traefik:
-      - default
+      default:
       # local network:
-      - intnet
+      intnet:
+        ipv4_address: ${ES_NET}.6
     ports:
       - ${KIBANA_PORT}:5601
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+      - ./extras/hosts/hosts:/etc/hosts
       - ./certs:/usr/share/kibana/config/certs
       - ./logs/kibana:/usr/share/kibana/logs
       - ./extras/kibana/kibana.yml:/usr/share/kibana/config/kibana.yml
